--- a/src/Resources_it.properties
+++ b/src/Resources_it.properties
@@ -1,4 +1,5 @@
 #X-Generator: crowdin.com
+ApplicationName=Yet Another Personal Account Manager
 
 MainFrame.ReadError=Yapbam non \u00e8 in grado di leggere questo file
 MainFrame.CheckedBalance=Controllato bilancio: {0}
@@ -21,6 +22,7 @@ MainFrame.ReadLastError=Errore durante la lettura dell'ultimo file aperto {0}
 MainFrame.ShowSubtransactions=Visualizza sottotransazione...
 MainFrame.ShowSubtransactions.All=Tutte
 MainFrame.ShowSubtransactions.None=Nessuno
+MainFrame.showColumns=Visualizza colonne...
 MainFrame.showColumns.ToolTip=Utilizzare questo menu per visualizzare o nascondere delle colonne
 MainFrame.stat.hide.tip=Clicca qui per nascondere i dettagli
 MainFrame.stat.show.tip=Clicca qui per avere maggiori dettagli
@@ -28,9 +30,11 @@ MainFrame.stat.summary=Numero delle spese: {0}, Numero di entrate: {1}, Saldo: {
 
 MainMenu.File=File
 MainMenu.File.Mnemonic=F
+MainMenu.File.ToolTip=Consente di creare, aprire e salvare i file dei conti
 
 MainMenu.NewFile=Nuovo
 MainMenu.NewFile.Mnemonic=N
+MainMenu.NewFile.ToolTip=Crea un nuovo file vuoto (senza transazioni o conti)
 MainMenu.NewFile.ConfirmMessage=Si sta per creare un nuovo file di dati vuoto. Desideri continuare?
 
 MainMenu.Open=Apri
@@ -49,6 +53,7 @@ MainMenu.SaveAs.ToolTip=Crea una copia del file corrente
 
 MainMenu.Import=Importa
 MainMenu.Import.Mnemonic=I
+MainMenu.Import.ToolTip=Importa i dati da un file di testo salvato in precedenza con un altro programma di contabilit\u00e0
 MainMenu.Export=Esporta ...
 MainMenu.Export.Mnemonic=E
 MainMenu.Export.ToolTip=Esporta i dati in un file di testo
@@ -80,6 +85,7 @@ MainMenu.Accounts.New.ToolTip=Crea un nuovo account
 
 MainMenu.Transactions=Transazioni
 MainMenu.Transactions.Mnemonic=T
+MainMenu.Transactions.ToolTip=Consente di gestire le transazioni (creazione, modifica, ...)
 
 MainMenu.Transactions.New=Nuova transazione
 MainMenu.Transactions.New.Mnemonic=N;
@@ -113,6 +119,7 @@ MainMenu.Transactions.Periodical.Mnemonic=G;
 MainMenu.Transactions.Periodical.ToolTip=Generare transazioni periodiche
 
 MainMenuBar.Filter=Filtri
+MainMenuBar.Filter.Tooltip=Filtra la tabella delle transazioni
 MainMenuBar.Filter.Mnemonic=I
 MainMenuBar.checked=Transazioni controllate
 MainMenuBar.notChecked=Transazioni non controllate
@@ -128,12 +135,14 @@ MainMenuBar.notChecked.toolTip=Seleziona le transazioni non controllate
 MainMenuBar.Receipts.toolTip=Seleziona le entrate
 MainMenuBar.Expenses.toolTip=Seleziona le spese
 MainMenuBar.AccountFilter.toolTip=Seleziona le transazioni del conto {0}
+MainMenuBar.NoAccountFilter.toolTip=Rimuove il filtro sui conti 
 
 MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
 MainMenu.QuestionMark.ToolTip=Mostra aiuto
 
 MainMenu.help=Guida
+MainMenu.help.tooltip=Apre la guida di Yapbam
 
 MainMenu.About=Informazioni su...
 MainMenu.About.Mnemonic=A
@@ -143,6 +152,8 @@ MainMenu.CheckUpdate=Cerca nuovi aggiornamenti
 MainMenu.CheckUpdate.ToolTip=Controlla aggiornamenti su Internet
 MainMenu.CheckUpdate.Error.title=Impossibile verificare gli aggiornamenti
 MainMenu.CheckUpdate.FirstRun.title=Verifica gli aggiornamenti
+MainMenu.CheckUpdate.FirstRun.message=<HTML>Benvenuto su Yapbam \!<BR><BR>Yapbam pu\u00f2 collegarsi ad internet per verificare se \u00e8 disponibile una nuova versione.<BR>Ti piacerebbe che Yapbam effettui questo controllo all'avvio?<BR><BR>Questa impostazione pu\u00f2 essere modificata nella finestra di dialogo Preferenze (nel menu File)</html>
+MainMenu.CheckUpdate.HttpError=<HTML><BODY>Errore di comunicazione con il server di aggiornamento: <B>Errore http {0,number}</B> <BR><BR>Questo server probabilmente \u00e8 temporaneamente inattivo. <BR> <BR>Per favore riprova pi\u00f9 tardi. Se il problema persiste, vai a <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.IOError=<HTML><BODY>Errore di comunicazione con il server di aggiornamento: <B>{0}</B> <BR><BR>si prega di controllare la connessione a Internet o le impostazioni di connessione di Internet di Yapbam. <BR> <BR>Se il problema persiste, si prega di visitare <a href="{1}"> {1}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.Header=<HTML><BODY>\u00e8 disponibile una nuova versione di <B>Yapbam</B>.</BODY></HTML>
 MainMenu.CheckUpdate.NoUpdate.title=Nessun aggiornamento disponibile
@@ -158,6 +169,7 @@ MainMenu.web.support.tooltip=Apre la pagina web di supporto di Yapbam, utile per
 MainMenu.web.yapbam=Visitare il sito web di Yapbam
 MainMenu.web.yapbam.tooltip=Apre home page di Yapbam (richiede una connessione Internet)
 
+BalanceHistory.title=Bilancio storico
 BalanceHistory.toolTip=Saldo giornaliero
 BalanceHistory.graph.title=Grafico
 BalanceHistory.graph.toolTip=Grafico del saldo quotidiano
@@ -258,6 +270,7 @@ Transaction.amount=Importo
 Transaction.category=Categoria
 Transaction.mode=Modalit\u00e0
 Transaction.number=Numero
+Transaction.valueDate=Data valuta
 
 TransactionDialog.account.new.tooltip=Fare clic per creare un nuovo conto
 TransactionDialog.account.tooltip=Selezionare il conto sul quale effettuare la transazione
@@ -283,6 +296,8 @@ TransactionDialog.receipt=Entrata
 TransactionDialog.receipt.tooltip=Selezionare la casella se la transazione \u00e8 una entrata
 TransactionDialog.title.new=Nuova transazione
 TransactionDialog.title.edit=Modifica transazione
+TransactionDialog.valueDate=Data valuta:
+TransactionDialog.valueDate.tooltip=Immettere la data valuta della transazione
 TransactionDialog.SubPanel.add=Aggiungi alla transazione
 TransactionDialog.SubPanel.add.tooltip=Selezionare questa casella per aggiornare automaticamente l'importo complessivo della transazione
 TransactionDialog.SubPanel.delete=Elimina
@@ -433,9 +448,12 @@ StatisticsPlugin.bar.debts=Spesa
 StatisticsPlugin.bar.empty=Nessuna transazione trovata mediante il filtro corrente
 StatisticsPlugin.bar.receipt=Entrata
 StatisticsPlugin.bar.tabname=Entrate/spese
+StatisticsPlugin.bar.title=Entrate e spese per categoria
+StatisticsPlugin.bar.tooltip=Questo grafico mostra le spese e la entrate per categoria
 StatisticsPlugin.bar.netValues.title=Mostra il bilancio
 StatisticsPlugin.pie.tabname=Oneri netti
 StatisticsPlugin.pie.byCategory.empty=Nessuna categoria ha pi\u00f9 spese che entrate
+StatisticsPlugin.pie.byCategory.title=Uscite per categoria
 StatisticsPlugin.title=Statistiche
 StatisticsPlugin.tooltip=Questa scheda consente di visualizzare alcune statistiche sulle tue entrate e le tue spese
 
@@ -488,12 +506,17 @@ CustomFilterPanel.valueDate.between=Tra
 CustomFilterPanel.valueDate.between.toolTip=Selezionare questa opzione per vedere solo le transazioni dove l'importo si trova tra i valori immessi
 CustomFilterPanel.valueDate.equals=Uguale a
 CustomFilterPanel.valueDate.equals.toolTip=Selezionare questa opzione per vedere solo le transazioni dove la data \u00e8 la stessa del valore immesso
+CustomFilterPanel.valueDate.from.toolTip=Data valuta iniziale
 CustomFilterPanel.valueDate.to=e
+CustomFilterPanel.valueDate.to.toolTip=Data valuta finale
 
 CustomFilterPanel.number.contains=Contiene
 CustomFilterPanel.number.contains.toolTip=Selezionare questa opzione se il numero di transazione deve contenere il numero immesso
 CustomFilterPanel.number.equals=Uguale a
+CustomFilterPanel.number.equals.toolTip=Seleziona questa opzione se il numero transazione deve essere uguale al numero immesso
 CustomFilterPanel.number.regularExpression=Espressione regolare
+CustomFilterPanel.number.regularExpression.toolTip=Selezionare questa opzione se il numero transazione deve soddisfare la seguente espressione regolare
+CustomFilterPanel.number.toolTip=Testo da confrontare con il numero transazione
 
 CustomFilterPanel.check=Verifica
 CustomFilterPanel.checked.toolTip=Selezionare questa casella per consentire le transazioni non controllate
@@ -521,10 +544,18 @@ BudgetPanel.title=Bilancio
 BudgetPanel.export=Esporta
 BudgetPanel.export.toolTip=Esporta questa tabella come un file di testo
 BudgetPanel.filter=Filtri
+BudgetPanel.perMonth=Allocazione per mese
+BudgetPanel.perMonth.tooltip=Mostra il bilancio mensile
+BudgetPanel.perYear=Allocazione per anno
+BudgetPanel.perYear.tooltip=Mostra il bilancio annuale
+BudgetPanel.perTransactionDate=Data transazione
+BudgetPanel.perTransactionDate.tooltip=Basa il bilancio sulla data transazione
+BudgetPanel.perValueDate.tooltip=Basa il bilancio sulla data valuta
 BudgetPanel.averageColumn.checkBox=Colonna media
 BudgetPanel.sumColumn.checkBox=Totale colonna
 BudgetPanel.sumColumn.checkBox.tooltip=Selezionare questa casella per aggiungere una colonna totale alla tabella.
 BudgetPanel.sumLine.checkBox=Riga dei totali
+BudgetPanel.sumLine.checkBox.tooltip=Selezionare questa casella per aggiungere una riga di totale alla tabella.
 BudgetPanel.sum=TOTALE
 BudgetPanel.average=MEDIA
 
@@ -542,23 +573,35 @@ ExportDialog.columnSeparator.defaultSeparator=Predefinito (Tab)
 ExportDialog.columnSeparator.defaultSeparator.toolTip=Selezionare questa opzione per utilizzare il separatore di default (carattere di tabulazione)
 ExportDialog.columnSeparator.customized.empty=Si prega di inserire un separatore di colonna di vostra scelta (un solo carattere) o deselezionare questa opzione per utilizzare l'impostazione predefinita
 ExportDialog.filteredRadioButton=Esporta le transazioni filtrate
+ExportDialog.filteredRadioButton.toolTip=Selezionare questa opzione per esportare solo le transazioni filtrate
 ExportDialog.headerCheckbox=Includere le intestazioni di colonna
+ExportDialog.headerCheckbox.toolTip=Selezionare questa casella per incominciare il file con una riga di intestazione
 ExportDialog.includeInitialBalanceCheckBox=Include saldo iniziale
+ExportDialog.message=<html>Controlla le colonne da esportare sul file.<br>Sposta le colonne qui sotto per cambiare il loro ordine nel file.</html> 
 ExportDialog.nothingToExport=\u00c8 necessario selezionare almeno un campo da esportare
 ExportDialog.done=Esportazione effettuata
 
 ImportDialog.title=Importa
+ImportDialog.YapbamFields=Campi di Yapbam
 ImportDialog.linkedTo=Collegato con
+ImportDialog.linkedTo.toolTip=Seleziona queste caselle per associare le colonne del file con i campi di Yapbam
 ImportDialog.importedFields=Colonne nel file
+ImportDialog.importedFields.toolTip=Selezionare la colonna che corrisponde a ogni campo di Yapbam
+ImportDialog.first.toolTip=Utilizza la prima riga del file importato per individuare i titoli della colonna
+ImportDialog.last.toolTip=Utilizza l'ultima riga del file importato per individuare i titoli della colonna
 ImportDialog.addToAccount=Aggiungi al conto:
 ImportDialog.addToCurrentFile=Aggiungere al file corrente
 ImportDialog.defaultAccount=Conto predefinito
 ImportDialog.help=Guida
+ImportDialog.help.toolTip=Fai clic qui per ottenere aiuto sull'importazione
 ImportDialog.noAmountSelected=Il campo importo non \u00e8 associato a nessuna colonna del file
+ImportDialog.noDateSelected=Il campo data non \u00e8 associato a nessuna colonna del file
 ImportDialog.errorMessage.title=Errore durante l'importazione
 ImportDialog.errorMessagelineNumberColumnHeader=Numero di riga
 # When an imported file contains erroneous lines, a report is displayed
 ImportDialog.errorMessagemessage=<html>Errori durante l'importazione del file. <br>Le seguenti righe non possono essere analizzate e verranno quindi ignorate.</html>
+ImportDialog.errorMessage.continue.tooltip=L'importazione continuer\u00e0 ignorando le linee che hanno errori
+ImportDialog.errorMessage.cancel.tooltip=Abbandona l'importazione
 
 #Account administration panel / checkbook's table
 checkbookDialog.border.title=Libretti degli assegni
@@ -599,6 +642,7 @@ StatementView.statementSummary={0} transazioni. Totale spese: {1}. Totale entrat
 #The title of the receipt column
 StatementView.receipt=Entrata
 #The title of the debt column
+StatementView.debt=Uscita
 
 #-------- Error Reporting part --------
 #Dialog
@@ -704,12 +748,15 @@ TransactionEditingPreferencesPanel.format.customized.sample=(esempio: {0})
 TransactionEditingPreferencesPanel.duplicateTransaction.title=Quando si duplica una transazione:
 
 #Alert dialogs
+DeleteTransactionAlert.message=Stai per eliminare una transazione.
 
 # This new preference dialog tab allows the user to set what is remembered between Yapbam launches
+PreferencesDialog.StartState.title=All'avvio
 PreferencesDialog.StartState.tableTitle=Tabelle
 PreferencesDialog.StartState.columnsWidth=Ricordare la larghezza delle colonne
 PreferencesDialog.StartState.columnsOrder=Ricordare l'ordine delle colonne 
 PreferencesDialog.StartState.hiddenColumns=Ricordare le colonne nascoste
+PreferencesDialog.StartState.dataTitle=Dati
 PreferencesDialog.StartState.openedFile=Ricordate l'ultimo file aperto
 PreferencesDialog.StartState.filter=Ricordate il filtro 
 
@@ -1069,4 +1116,5 @@ LinkEditor.url.tooltip=Immettere l'URL di destinazione in questo campo
 
 generic.recommended.with.parenthesis=(raccomandato)
 
+CustomFilterPanel.save.saveButton.title=Salva
 
