--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,6 +5,11 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
+version	0.20.4 (28/01/2018)
+improvement
+	La traduction en arabe est maintenant terminée.
+	Ajoute plus de traductions en italien et certaines en japonais. 
+
 version	0.20.3 (07/01/2018)
 improvement
 	La traduction en espagnol est maintenant terminée.
