--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -5,12 +5,16 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
-version	0.20.10 (??/02/2020)
+version	0.20.11 (21/02/2020)
 improvement
-	Ajoute la traduction en Néerlandais
+	Ajoute la traduction en Néerlandais.
 fix
 	Corrige les problèmes de sélection du filtre édité/supprimé/dupliqué dans l'onglet "Administration/Filtres".
 	Corrige certaines traductions en Italien.
+
+version	0.20.10 (19/05/2019)
+improvement
+	Ajoute/Corrige des traductions en Italien et Portuguais.
 
 version	0.20.9 (11/11/2018)
 fix
